tests/fixtures/positive/libraries/ForbiddenPublicDataClass.kt
package test

data class UserConfig(val host: String, val port: Int, val timeout: Long)
