tests/fixtures/negative/style/DataClassShouldBeImmutable.kt
package style

data class ImmutableUser(val name: String, val age: Int)

data class Config(val host: String, val port: Int)
